--- a/sample/index.css
+++ b/sample/index.css
@@ -52,7 +52,6 @@ section {
     color: #24292e;
     background: #fcf2f3;
     border-radius: 8px;
-    display: flex;
     justify-content: flex-start;
     align-items: center;
     padding: 8px 10px;
@@ -66,6 +65,10 @@ section {
   }
   
   .warning-invisible {
+    display: none;
+  }
+
+  .hide-item {
     display: none;
   }
   
